# ComfyUI-hibiki

./: .gitmodules  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
examples/: hibiki_speech2speech_translation.json
modules/: hibiki_inferencer.py
