#  Edit the following fields to match your project

[project]
name = "comfyui-hibiki"
description = "ComfyUI wrapper for Speech-to-Speech translation, hibiki: https://github.com/kyutai-labs/hibiki"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["git+https://github.com/jhj0517/moshi_comfyui_wrapper.git@main#subdirectory=moshi",]

[project.urls]
Repository = "https://github.com/jhj0517/ComfyUI-hibiki.git"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "jhj0517"
DisplayName = "ComfyUI-hibiki"
Icon = ""
